# linot-card-game

./: .gitignore  DEVELOPER_GUIDE_ISSUES.md  Dockerfile  GRAPHQL_TESTING.md  README.md  WAVE_4_SUBMISSION.md  compose.yaml  deployment_info.json  run-frontend.bash  run.bash  show-deployment.bash  test_player1.js  test_player2.js
.github/workflows/: docker-test.yml
backend/: Cargo.toml
backend/abi/: Cargo.toml
backend/abi/src/: card.rs  deck.rs  events.rs  game.rs  lib.rs
backend/src/: contract.rs  lib.rs  service.rs  state.rs
backend/src/chains/: mod.rs  play_chain.rs  user_chain.rs
docs/: WAVE_4_DESCRIPTION.md  doc_links.md  guide-links.md  old-bash.md  query_hand_for_players.md
docs/wave_4_revamp/: COMPLETE_FIX_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  FRONTEND_FIXES_COMPLETE.md  FRONTEND_FIX_PLAN.md  actual_graphql_mutations.md  bash_script_fixes.md  frontend_attempt.md  new_working_bash.md  working_script_output.md  working_version._query.md
docs/wave_5/: MULTIPLAYER_PATTERN.md  TESTNET_DEPLOYMENT.md  TESTNET_TESTING.md  deployment_analysis.md  deployment_fix_summary.md  frontend.md  frontend_integration_resources.md  guide_frontend_and_backend.md  local_setup.md  testnet_failure_analysis.md  testnet_validator_details.md
frontend/: package-lock.json  package.json
frontend/app/: ConfigLoader.tsx  Providers.tsx  globals.css  layout.tsx  page.tsx
frontend/components/: Card.tsx  DrawPile.tsx  GameButton.tsx  (+12 more)
frontendv2/: package-lock.json
scripts/: kill_test.sh  test_multiplayer.sh  test_quick.sh  test_simple.sh
tmp/: keystore_1.json  keystore_2.json  wallet_1.json  wallet_2.json
(+150 files in other folders)
