[workspace]
members = ["abi", "."]

[workspace.dependencies]
async-graphql = { version = "=7.0.17", default-features = false }
linera-sdk = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
whot-abi = { path = "abi" }
async-graphql.workspace = true
linera-sdk.workspace = true
linera-views = "0.15.4"
futures = { version = "0.3 "}
serde.workspace = true
serde_json = { version = "1.0" }
thiserror.workspace = true

[dev-dependencies]
linera-sdk = { version = "0.15.4", features = ["test", "wasmer"] }
tokio = { version = "1.40", features = ["rt", "sync"] }

[[bin]]
name = "backend_contract"
path = "src/contract.rs"

[[bin]]
name = "backend_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'

[lib]
name = "linot"
path = "src/lib.rs"
