[package]
name = "linot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.17", default-features = false }
linera-sdk = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
getrandom = { version = "0.2.15", default-features = false, features = ["custom"] }

[dev-dependencies]

[lib]
name = "linot"
path = "src/lib.rs"

[[bin]]
name = "linot_contract"
path = "src/contract.rs"

[[bin]]
name = "linot_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
